# AISO-ml6-workshop

./: .gitignore  README.md  pyproject.toml
.agent/skills/adk-skill/: SKILL.md
benchmark/: questions.json
my_agent/: agent.py
my_agent/tools/: __init__.py  analyze_image.py  calculator.py  chess_engine.py  chess_vision.py  download_pdf.py  fetch_webpage.py  image_reader.py  read_pdf.py  research_human.py  web_search.py
